--- a/package.json
+++ b/package.json
@@ -5,6 +5,43 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.22.0"
+    "babel-runtime": "^6.18.0",
+    "bcrypt": "^0.8.7",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+    "bootswatch": "^3.3.7",
+    "eslint-config-meteor": "0.0.9",
+    "faker": "^3.1.0",
+    "font-awesome": "^4.7.0",
+    "griddle-react": "^0.7.0",
+    "lodash": "^4.17.2",
+    "meteor-node-stubs": "~0.2.0",
+    "react": "^15.3.2",
+    "react-bootstrap-modal": "^3.0.1",
+    "react-bootstrap-sweetalert": "^3.0.0",
+    "react-break": "^1.1.0",
+    "react-dom": "^15.3.2",
+    "react-fastclick": "^2.1.2",
+    "react-mounter": "^1.2.0",
+    "react-slick": "^0.14.5",
+    "sift": "^3.2.6",
+    "simpl-schema": "0.0.3",
+    "slick-carousel": "^1.6.0",
+    "velocity-react": "^1.1.11"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.1"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions"
+        ]
+      }
+    }
+  },
+  "eslintConfig": {
+    "extends": "eslint-config-meteor"
   }
 }
